# nijika-api

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md
.forgejo/workflows/: ci.yml
docs/: api.md  architecture.md  quality_audit.md  staff_api.md
migrations/: 20260208000000_init.sql  20260208000001_fix_sessions.sql  20260208000001_usage_logs.sql  20260208000002_transactions.sql  20260208000002_update_credit_precision.sql  20260208000003_optimizations.sql  20260208000004_credit_check_constraint.sql  20260208000005_transaction_type_enum.sql  20260208000006_user_roles.sql  20260208000007_user_status.sql
nijika-macros/: Cargo.toml
nijika-macros/src/: lib.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  mod.rs  removebg.rs  staff.rs  upscaler.rs
src/models/: mod.rs
src/routes/: auth_middleware.rs  mod.rs
templates/: base.html  dashboard.html  hello.html  landing.html  login.html  register.html
templates/staff/: logs.html  system.html  user_detail.html  users.html
tests/: heavy_load_test.rs  rate_limit_test.rs
workers/: README.md
workers/removebg/: app.py
workers/upscaler/: app.py
