[package]
name = "nijika-api"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
askama = "0.15.4"
axum = { version = "0.8.8", features = ["multipart"] }
bytes = "1.11.1"
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "rust_decimal"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie-private"] }
rust_decimal = { version = "1.36.0", features = ["serde-with-str"] }
nijika-macros = { path = "./nijika-macros" }
axum-governor = { version = "1.0.3", features = ["full"] }
real = "0.1.4"
lazy-limit = "1.0.3"

[workspace]
members = [".", "nijika-macros"]

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
